<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app setting string -->
    <string name="app_name">MEWS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">135716029958952</string>

    <!-- MENU string -->
    <string name="menu_item_1">menu_item_1</string>
    <string name="menu_item_2">menu_item_2</string>
    <string name="menu_item_3">menu_item_3</string>
    <string name="menu_item_4">menu_item_4</string>
    <string name="default_username">guest</string>

    <!-- Dialog string -->
    <string name="logout_string1">You are logging out MEWS</string>
    <string name="logout_string2">Are you sure you want to logout?</string>
    <string name="login_string1">You are logging in to MEWS</string>
    <string name="login_string2">Welcome to MEWS!</string>
    <string name="login_success_string">You are logged in as </string>
    <string name="login_fail_string">Login fail! </string>
    <string name="logout_success_string">Logout successfully! </string>
    <string name="logout_fail_string">Logout fail! </string>
    <string name="loading_text">Loading &#8230;</string>
    <string name="okay">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="share_string">Bought you by MEWS</string>
    
    <!-- Pull to referesh string -->
    <string name="xlistview_header_hint_normal">Pull to refresh</string>
    <string name="xlistview_header_hint_ready">Release to referesh</string>
    <string name="xlistview_header_hint_loading">Loading&#8230;</string>
    <string name="xlistview_header_last_time">Last updated at：</string>
    <string name="xlistview_footer_hint_normal">Load more</string>
    <string name="xlistview_footer_hint_ready">Release to load more</string>

    <!-- menu string -->
    <string name="news_list_menu_date">Sort By Date</string>
    <string name="news_list_menu_hotness">Sort By Popularity</string>
    <string name="news_list_menu_distance">Release to load more</string>

    <!-- layout string -->
    <string name="default_textview_text">Loading</string>
    <string name="default_textview_title">Title</string>
    <string name="default_textview_content">This is content and more content and more content and more content and more content and more content and more content and more content and more content and more content</string>
    <string name="default_textview_date">Date:</string>
    <string name="default_textview_location">Location:</string>
    <string name="edittext_hint">Comment&#8230;</string>
    <string name="post_comment_btn_text">POST</string>
    <string name="post_comment_photo_btn_text">Photo</string>
   
    <!-- Toast string -->
    <string name="login_toast">Please Login First!</string>

</resources>