<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/item_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_background_white"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- android:padding="16dp"> -->

        <ImageView
            android:id="@+id/thumb_imageview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:alpha="0.85"
            android:contentDescription="@string/app_name"
            android:src="@drawable/default_image" />

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/thumb_imageview"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/arrow_imageview"
            android:layout_toRightOf="@+id/thumb_imageview"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/default_textview_title"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_textview"
                android:padding="5dp"
                android:text="@string/default_textview_location"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/content_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_textview"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/default_textview_content"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/content_textview"
                android:layout_marginTop="15dp"
                android:padding="0dp"
                android:text="@string/default_textview_date"
                android:textColor="#7F7F7F"
                android:textSize="12sp" />
            <!-- android:layout_alignParentBottom="true" -->
            <!-- android:layout_alignParentRight="true" -->

        </RelativeLayout>

        <ImageView
            android:id="@+id/arrow_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="2dp"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <!-- <RelativeLayout -->
    <!-- android:id="@+id/locaiton_layout" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignParentLeft="true" -->
    <!-- android:layout_alignRight="@+id/fake_view" -->
    <!-- android:layout_below="@+id/item_main_layout" -->
    <!-- android:background="@drawable/card_background_white" -->
    <!-- android:orientation="horizontal" > -->


    <!-- <TextView -->
    <!-- android:id="@+id/location_textview" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_centerHorizontal="true" -->
    <!-- android:padding="5dp" -->
    <!-- android:text="@string/default_textview_location" -->
    <!-- android:textSize="15sp" /> -->
    <!-- </RelativeLayout> -->


    <!-- <View -->
    <!-- android:id="@+id/fake_view" -->
    <!-- android:layout_width="0dp" -->
    <!-- android:layout_height="0dp" -->
    <!-- android:layout_centerInParent="true" /> -->

    <LinearLayout
        android:id="@+id/other_parent_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/locaiton_layout"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/locaiton_layout"
        android:layout_below="@+id/item_main_layout"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/distance_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/card_background_white"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/distance_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/dark_dot" />

            <TextView
                android:id="@+id/distance_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/card_background_white"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/address_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/dark_dot" />

            <TextView
                android:id="@+id/address_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="122"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/other_parent_layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/locaiton_layout"
        android:layout_below="@+id/other_parent_layout"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/other_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/card_background_white"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/up_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/dark_dot" />

            <TextView
                android:id="@+id/up_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/other_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/card_background_white"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/down_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/dark_dot" />

            <TextView
                android:id="@+id/down_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="122"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/other_layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/card_background_white"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/view_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/dark_dot" />

            <TextView
                android:id="@+id/view_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="345"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>